# minimind

./: .gitignore  LEARN_CN.md  README.md  README_en.md  pyproject.toml
trainer/: train_dpo.py
