[project]
name = "minimind"
version = "0.1.0"
description = "MiniMind: 从零开始训练一个微型大语言模型"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["llm", "transformer", "pytorch", "minimind", "language-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.57.1",
    "datasets>=3.6.0",
    "peft>=0.7.1",
    "trl>=0.13.0",
    "sentence-transformers>=2.3.1",
    "tiktoken>=0.10.0",
    "openai>=1.59.6",
    "wandb>=0.18.3",
    "swanlab>=0.6.8",
    "streamlit>=1.50.0",
    "flask>=3.0.3",
    "flask-cors>=4.0.0",
    "ngrok>=1.4.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.5.1",
    "einops>=0.8.1",
    "jieba>=0.42.1",
    "nltk>=3.8",
    "numpy>=1.26.4",
    "pydantic>=2.11.5",
    "rich>=13.7.1",
    "ujson>=5.1.0",
    "jsonlines>=4.0.0",
    "marshmallow>=3.22.0",
    "datasketch>=1.6.4",
    "simhash>=2.1.2",
    "jinja2>=3.1.2",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]
all = [
    "accelerate>=1.0.0",
    "deepspeed>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/minimind"
Repository = "https://github.com/YOUR_USERNAME/minimind"
Documentation = "https://github.com/YOUR_USERNAME/minimind#readme"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/minimind/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B028"]

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 120
